alignment fixes and home arrow

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,73 @@
     right: 9rem;
 }
 
+.about-img-mob {
+    max-width: 100%;
+    height: auto;
+}
+
+/* arrow css */
+.arrows {
+    width: 60px;
+    height: 72px;
+    position: absolute;
+    left: 50%;
+    margin-left: -30px;
+    bottom: 20px;
+}
+
+.arrows path {
+    stroke: #070c0f;
+    fill: transparent;
+    stroke-width: 1px;
+    animation: arrow 2s infinite;
+    -webkit-animation: arrow 2s infinite;
+}
+
+@keyframes arrow {
+    0% {
+        opacity: 0;
+    }
+    40% {
+        opacity: 1;
+    }
+    80% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+@-webkit-keyframes arrow {
+    0% {
+        opacity: 0;
+    }
+    40% {
+        opacity: 1;
+    }
+    80% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+.arrows path.a1 {
+    animation-delay: -1s;
+    -webkit-animation-delay: -1s;
+}
+
+.arrows path.a2 {
+    animation-delay: -0.5s;
+    -webkit-animation-delay: -0.5s;
+}
+
+.arrows path.a3 {
+    animation-delay: 0s;
+    -webkit-animation-delay: 0s;
+}
 @media screen and (max-width: 768px) {
     .nav-list {
         flex-direction: column;
@@ -11,7 +78,16 @@
         align-items: flex-end;
         justify-content: space-around;
     }
+
     .nav-list > a {
         padding-top: 2rem;
+    }
+
+    .landing-desktop {
+        display: none;
+    }
+
+    .landing-mobile {
+        display: flex;
     }
 }
